--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
   <div class="contact-section comic-neue-regular">
     <h2>Join Our Community</h2>
     <p>Follow us on Discord for the latest updates and event announcements!</p>
-    <button onclick="window.location.href='http://discord.gg/sleepymeadows'" class="join-button">
-        discord.gg/sleepy
+    <button onclick="window.location.href='http://discord.gg/hitsnooze'" class="join-button">
+        discord.gg/hitsnooze
     </button>
   </div>
 
