--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       "2025-01-08": {
         "title": "🎨❄️ Custom Skin Competition",
         "startTime": "6pm EST",
-        "description": "✨ Join Sleepy members in a fun night on ____ to show off your winter themed game cosmetics and later join us on roblox for some dress up fun!! ✨",
+        "description": "✨ Join Sleepy members in a fun night on minecraft to show off your winter themed game cosmetics and later join us on roblox for some dress up fun!! ✨",
         "category": "competition"
       },
       "2025-01-10": {
